--- a/Werka/index.html
+++ b/Werka/index.html
@@ -195,7 +195,7 @@
             <div class="testimonial-box">
               <div class="testimonial-author">
                 <img
-                  src="img/Werkak.jpg"
+                  src="img/Werkacta.jpg"
                   alt="fotografia kobieta z aparatem"
                   class="testimonial-img"
                 />
@@ -219,7 +219,7 @@
             <div class="testimonial-box">
               <div class="testimonial-author">
                 <img
-                  src="img/Marcelina.jpg"
+                  src="img/Werkacta.jpg"
                   alt="fotografia kobieta z aparatem"
                   class="testimonial-img"
                 />
